@@ -1,0 +1,1 @@
+WARNING: new definition `::foo' will overshadow `lib::foo'.
