@@ -1,0 +1,1 @@
+WARNING: new definition `::c' will overshadow `a::c'.
